[project]
name = "crabapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frederik Krämer", email = "frdrkkraemer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "dash-ag-grid>=31.3.0",
    "dash-bootstrap-components>=1.7.1",
    "plotly>=6.0.0",
    "polars[excel]>=1.23.0",
    "pyjanitor>=0.30.0",
    "pywebview>=5.4",
    "scipy>=1.15.2",
    "setproctitle>=1.3.5",
]

[project.scripts]
crabapp = "crabapp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "rich>=13.9.4",
    "ruff>=0.9.9",
]
